<resources>
    <string name="app_name">Stress Detector</string>
    <string name="button_Camera">Chẩn đoán</string>
    <string name="button_History">Lịch sử</string>
    <string name="title">Stress Detector</string>
    <string name="instruction">Đặt ngón tay của bạn tiếp xúc và che phủ toàn bộ camera</string>
    <string name="get_started">Bắt đầu</string>
    <string name="ok_button">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="avnn">Average of all NN intervals</string>
    <string name="sdnn" translatable="false">Standard deviation of all NN intervals</string>
    <string name="rmssd">Square root of the mean of the squares of differences between adjacent NN intervals</string>
    <string name="pnn50">Percentage of differences between adjacent NN intervals that are greater than 50 ms</string>
    <string name="processing">Đang xử lý…</string>
    <string name="avrr">AVRR:</string>
    <string name="sdrr">SDRR:</string>
    <string name="RMSsD">rMSSD:</string>
    <string name="stress">Stress:</string>
    <string name="advice">Hiển thị lời khuyên?</string>
    <string name="no_stress">Không có phát hiện căng thẳng tức thời, nhưng bạn có muốn…</string>
    <string name="yes_stress">Có phát hiện căng thẳng! Bạn có muốn…</string>
    <string name="bpm">BPM:</string>
    <string name="question_1">Bạn cảm thấy nguyên nhân căng thẳng của bản thân giống với trường hợp nào nhất?</string>
    <string name="stress_name">Căng thẳng</string>
    <string name="stress_time">do áp lực thời gian</string>
    <string name="stress_unconfident">do cảm giác thiếu chắc chắn</string>
    <string name="stress_event">do sự kiện bất ngờ</string>
    <string name="stress_people">liên quan đến con người</string>
    <string name="des_stress_time">Bạn thấy mình khó mà hoàn thành công việc đúng giờ, và một ngày có 24 tiếng dường như chẳng đủ cho bạn.</string>
    <string name="des_stress_unconfident">Bạn lo lắng về tương lai của bản thân, sợ việc thất bại, cảm thấy mình thua kém người khác,…</string>
    <string name="des_stress_event">Có những chuyện không may xảy ra, và giờ bạn cảm thấy mọi thứ cứ rối tinh rối mù lên hết</string>
    <string name="des_stress_people">Bạn cảm thấy mệt mỏi và sợ hãi khi phải tiếp xúc hay tương tác với người khác</string>
    <string name="note_stress_time">Dù thế nào thì, việc bạn cố gắng đã rất đáng khen rồi đó! Đừng ép buộc bản thân quá nha!</string>
    <string name="note_stress_unconfident">Hãy nhớ bạn là một con người tuyệt vời lắm luôn ý, và mọi thứ sẽ ổn thôi!</string>
    <string name="note_stress_event">Rồi mọi chuyện sẽ qua, mong là bạn luôn giữ được sự lạc quan của mình nghe</string>
    <string name="note_stress_people">Mỗi người có một tính cách và sức chịu đựng riêng. Ai cũng có lúc cảm thấy căng thẳng mà.</string>
    <string name="loi_khuyen">Lời khuyên:</string>
    <string name="button_Survey">Câu hỏi</string>
    <string name="quest_sleeptime">Tối qua bạn ngủ bao nhiêu giờ?</string>
    <string name="quest_stress">Bạn có đang cảm thấy căng thẳng không?</string>
    <string name="hint_sleeptime">Nhập số giờ ngủ ước tính</string>
    <string name="hint_stress">yes/no</string>
    <string name="next_quest">Tiếp theo</string>
    <string name="quest_pam">Chọn bức ảnh gần đúng với tâm trạng của bạn nhất</string>
    <string name="instruction_after_advice">Chạm vào màn hình để tiếp tục</string>
    <string name="return_home_page">Trở về màn hình chính</string>
    <string name="thank_you">Bạn đã hoàn thành!</string>
    <string name="usage_instruction">Hướng dẫn sử dụng</string>
    <string name="usage_instruction_text">Hướng dẫn sử dụng</string>
    <string name="usage_instruction1">Cảm ơn bạn đã tham gia cùng chúng mình xây dựng bộ dữ liệu về stress cho học sinh!</string>
    <string name="usage_instruction2_1">1. Những điều bạn cần làm:</string>
    <string name="usage_instruction2_2">Sử dụng tính năng "Chẩn đoán" 5–10 lần/ngày và tính năng "Ngày qua" 1 lần/ngày.</string>
    <string name="usage_instruction2_3">Nếu bạn chưa hoàn thành khảo sát dành cho tình nguyện viên thì hãy copy UserCode phía dưới và ấn vào nút "Perceived Stress" để hoàn thành khảo sát nhé!</string>
    <string name="perceived_stress_button">Perceived Stress</string>
    <string name="UserCode_title">2. UserCode của bạn</string>
    <string name="quest_steps">Hôm nay bạn đã đi bao nhiêu bước?</string>
    <string name="hint_steps">Nhập số bước đi</string>
    <string name="done">Xong</string>
    <string name="stress_quest">Bạn có đang cảm thấy căng thẳng không?</string>
    <string name="ans_yes">Có</string>
    <string name="ans_no">Không</string>
    <string name="everyday_title">Ngày qua</string>\
    <string name="tips">Mẹo: nếu kết quả đo cho ra BPM (dòng đầu tiên) nhỏ hơn 70 hoặc lớn hơn 120 thì bạn hãy đo lại nhé. Chú ý đặt ngón tay tiếp xúc và che phủ toàn bộ camera và thực hiện đo ở nơi có nhiều ánh sáng.</string>
    <string name="notify_button">Tự động thông báo cho người thân khi stress liên tục kéo dài 1 tháng</string>
    <string name="instruction_notify">3. Tự động thông báo cho người thân</string>
    <string name="instruction_notify_content">Dựa vào dữ liệu đo được hằng tháng của bạn, Stress Detector sẽ phát đi cảnh báo đến những người thân bạn thêm vào danh sách dưới đây để họ biết về tình trạng căng thẳng kéo dài của bạn</string>
    <string name="family_list">Danh sách người thân</string>
    <string name="hint_name">Tên người thân</string>
    <string name="hint_rela">Quan hệ</string>
    <string name="hint_info">Email/Điện thoại</string>
    <string name="notify_activity_header">Danh sách người thân</string>
    <string name="askforflash">Sử dụng đèn Flash</string>
    <string name="hint_userName">Nhập tên của bạn</string>
</resources>